# hypermodern-python

./: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  models.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
