[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "A hypermodern-python project"
authors = ["holiveira <oliveira.herson@gmail.com>"]
license = "MIT"
repository = "https://github.com/hersonoliveira/hypermodern-python"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
