[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "A hypermodern-python project"
authors = ["holiveira <oliveira.herson@gmail.com>"]
license = "MIT"
repository = "https://github.com/hersonoliveira/hypermodern-python"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.0.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
black = "^21.10b0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.2"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
